start with adding ws base classes

--- a/package.json
+++ b/package.json
@@ -2,13 +2,23 @@
   "name": "athaeck-websocket-express-base",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "workspaces": [
-    "packages/*"
+    "athaeck-express-base"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:dev": "nodemon dist/index.js",
+    "build:dev": "tsc --watch --preserveWatchOutput",
+    "dev": "concurrently \"npm:build:dev\" \"npm:start:dev\"",
+    "start": "node dist/index.js"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Nick Häcker",
+  "license": "ISC",
+  "dependencies": {
+    "@types/socket.io": "^3.0.2",
+    "@types/ws": "^8.5.8",
+    "athaeck-express-base": "file:./athaeck-express-base",
+    "socket.io": "^4.7.2",
+    "ws": "^8.14.2"
+  }
 }
